# kcpilot

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml
.claude/agents/: security-reviewer.md
.claude/commands/: branch.md  commit.md
.github/workflows/: cd.yaml  ci.yaml  ci.yml
ai-service/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  ingest.py  llm.py  main.py  pyproject.toml  requirements.txt  schemas.py  settings.py  workflow.py
ai-service/data/: recalls.json
ai-service/data/legal/: 01_안전_안전관리법_제5조.md  02_안전_시행규칙_별표3.md  03_안전_안전기준_KC60335-2-23.md  04_전자파_전파법_제58조의2.md  05_전자파_전파법시행령_적합등록대상.md  06_전자파_KN14-1.md
ai-service/pipeline/: fetch_laws.py  fetch_recalls.py  fetch_standards.py  ingest.py  parse_emc_pdf.py  parse_laws.py  preprocess.py
backend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  build.gradle.kts
backend/src/main/java/com/kcpilot/: BackendApplication.java
backend/src/main/resources/: application-local.yaml.example  application-prod.yaml  application.yaml
backend/src/test/java/com/kcpilot/: BackendApplicationTests.java
docs/: data_pipeline.md  data_preprocessing_howto.md  erd.dbml  gcp-setup.md  git_convention.md  requirements.md  wireframes.html
docs/api/: openapi.yaml
frontend/: CLAUDE.md  Dockerfile  jest.config.js  jest.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx  types.ts
frontend/src/app/api/assessments/: route.ts
infra/postgres/init/: 01-init.sql
(+8 files in other folders)
