[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.2",
    "langgraph-prebuilt>=1.1.0",
    "openai>=2.38.0",
    "pdfminer-six>=20251230",
    "pdfplumber>=0.11.9",
    "pgvector>=0.3.6",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pypdfium2>=5.8.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
